[package]
name = "bgm-property-generator"
version = "0.1.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

[dependencies]
smash-arc = { git = "https://github.com/jam1garner/smash-arc", features = ["libzstd"] }
smash-bgm-property = "1"
nus3audio = { path = "../libnus3audio" }
binread = "1.4.0"
